# Core Driver Build Definition

driver_files = files(
    'internal/gpio.cpp',
    'internal/i2c.cpp',
    'internal/led.cpp',
    'internal/basic_display.cpp',
    'internal/spi.cpp',
    'internal/system_clock.cpp',
    'internal/time_of_flight.cpp',
    'internal/timer.cpp'
)

driver_test_files = files(
	'driver_test.cpp',
	'driver_registry_tests.cpp'
)
